--- a/app.ini
+++ b/app.ini
@@ -9,7 +9,7 @@ HOST = REDACTED
 NAME = REDACTED
 USER = REDACTED
 PASSWD = REDACTED
-SCHEMA =
+SCHEMA = 
 SSL_MODE = disable
 PATH = /var/lib/forgejo/data/forgejo.db
 LOG_SQL = false
@@ -33,14 +33,20 @@ OFFLINE_MODE = false
 PATH = /var/lib/forgejo/data/lfs
 
 [mailer]
-ENABLED = false
+ENABLED = true
+FROM = git@ari.lt
+PROTOCOL = smtps
+SMTP_ADDR = mail.ari.lt
+SMTP_PORT = 465
+USER = git@ari.lt
+PASSWD = REDACTED
 
 [service]
-REGISTER_EMAIL_CONFIRM = false
-ENABLE_NOTIFY_MAIL = false
-DISABLE_REGISTRATION = true
+REGISTER_EMAIL_CONFIRM = true
+ENABLE_NOTIFY_MAIL = true
+DISABLE_REGISTRATION = false
 ALLOW_ONLY_EXTERNAL_REGISTRATION = false
-ENABLE_CAPTCHA = false
+ENABLE_CAPTCHA = true
 REQUIRE_SIGNIN_VIEW = false
 DEFAULT_KEEP_EMAIL_PRIVATE = false
 DEFAULT_ALLOW_CREATE_ORGANIZATION = true
@@ -52,7 +58,7 @@ ENABLE_OPENID_SIGNIN = false
 ENABLE_OPENID_SIGNUP = false
 
 [cron.update_checker]
-ENABLED = false
+ENABLED = true
 
 [session]
 PROVIDER = file
@@ -71,7 +77,7 @@ DEFAULT_TRUST_MODEL = committer
 [security]
 INSTALL_LOCK = true
 INTERNAL_TOKEN = REDACTED
-PASSWORD_HASH_ALGO = REDACTED
+PASSWORD_HASH_ALGO = argon2
 
 [oauth2]
 JWT_SECRET = REDACTED
