--- a/app.ini
+++ b/app.ini
@@ -9,7 +9,7 @@ HOST = REDACTED
 NAME = REDACTED
 USER = REDACTED
 PASSWD = REDACTED
-SCHEMA = 
+SCHEMA =
 SSL_MODE = disable
 PATH = /var/lib/forgejo/data/forgejo.db
 LOG_SQL = false
@@ -52,6 +52,7 @@ DEFAULT_KEEP_EMAIL_PRIVATE = false
 DEFAULT_ALLOW_CREATE_ORGANIZATION = true
 DEFAULT_ENABLE_TIMETRACKING = true
 NO_REPLY_ADDRESS = git.noreply.ari.lt
+ENABLE_NOTIFY_MAIL = true
 
 [openid]
 ENABLE_OPENID_SIGNIN = false
@@ -81,3 +82,6 @@ PASSWORD_HASH_ALGO = argon2
 
 [oauth2]
 JWT_SECRET = REDACTED
+
+[admin]
+SEND_NOTIFICATION_EMAIL_ON_NEW_USER = true
